# DataStructureInC

./: CMakeLists.txt  README.md  main.c
infra/: CMakeLists.txt
infra/cmake/: infra_utils.cmake
infra/include/: err_code.h  log.h  trycatch.h  uni_type.h
lineartable/: CMakeLists.txt
lineartable/include/: arraylist_api.h  doublelinkedlist_api.h  lineartable.h  linkedlist_api.h
lineartable/src/: arraylist_impl.c  doublelinkedlist_impl.c  linkedlist_impl.c
tests/: CMakeLists.txt  gtest_arraylist_test.cpp
